[package]
name = "cli"
version = "0.1.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli"]
license = "MIT"
repository = "https://github.com/azzamsa/rust-cli"
description = "Rust CLI Template"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# cli
ansi_term = "0.12.1"
atty = "0.2.14"
clap = { version = "3.2.12", features = ["suggestions", "cargo"] }
wild = "2.0.4"

# error
thiserror = "1.0.31"

[dev-dependencies]
# test
anyhow = "1.0.58"
assert_cmd = "2.0.4"
predicates = "2.1.1"

cargo-husky = { version = "1", features = ["user-hooks"] }
