[package]
name = "mold"
version = "0.1.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli"]
license = "MIT"
repository = "https://github.com/azzamsa/template"
description = "Rust CLI Template"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# cli
ansi_term = "0.12"
atty = "0.2"
clap = { version = "4.0", features = ["suggestions", "cargo"] }
wild = "2.1"

# error
thiserror = "1.0"

[dev-dependencies]
# test
anyhow = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
