[package]
name = "mold"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.5.1", features = ["nightly"] }
leptos_axum = { version = "0.5.1", optional = true }
leptos_meta = { version = "0.5.1", features = ["nightly"] }
leptos_router = { version = "0.5.1", features = ["nightly"] }

# Logging
console_error_panic_hook = "0.1.7"
console_log = "1"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

axum = { version = "0.6.1", optional = true }
tokio = { version = "1.28.1", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }

cfg-if = "1.0"
thiserror = "1.0.49"
wasm-bindgen = "0.2.84"
hyper = "0.14.27"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
env = "DEV"

site-root = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file = "styles/main.css"
assets-dir = "public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
watch = false

bin-features = ["ssr"]
lib-features = ["hydrate"]
